2005-10-19  Don Allingham  <don@gramps-project.org>
	* src/Sources.py: fix typo on gladeif call

2005-10-19  Stefan Bjork  <skalman@acc.umu.se>
	* src/po/sv.po: Updates.

2005-10-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: More randomisation; new test options
	* src/RelLib.py (Source.get_text_data_list): Add missing fields
	* src/AttrEdit.py: escape xml-specialchars because of use_markup
	* src/EditPerson.py: escape xml-specialchars because of use_markup
	* src/EventEdit.py: escape xml-specialchars because of use_markup
	* src/Marriage.py: escape xml-specialchars because of use_markup
	* src/NameEdit.py: escape xml-specialchars because of use_markup
	* src/PedView.py: escape xml-specialchars because of use_markup
	* src/UrlEdit.py: escape xml-specialchars because of use_markup


2005-10-18  Don Allingham  <don@gramps-project.org>
	* src/Report.py: bumped the maximum generations to 999 from 31

2005-10-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/NavWebPage.py: Support side-by-side gallery images
	* src/data/main*.css: Support side-by-side gallery images
	
2005-10-18  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/CmdRef.py: Use <para> withing the <listitem>.
	* doc/graps-manual/C/cmdplug.xml: Update.

2005-10-17  Don Allingham  <don@gramps-project.org>
	* src/gedcomimport.glade: use expanders for information and
	warning windows.
	* src/AddSpouse.py: remove signal_autoconnect
	* src/DisplayTrace.py: remove signal_autoconnect
	* src/EditSource.py: remove signal_autoconnect
	* src/ReadGedcom.py: two pass approach for handling forward
	refererencing notes, less obscure names
	* src/gramps.glade: remove signal mappings
	* src/plugins.glade: remove signal mappings

2005-10-18  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/WriteGedcom.py: Add description and notes for media objects

2005-10-17  Stefan Bjork  <skalman@acc.umu.se>
	* src/po/template.po: Broken and recreated.
