@@ -1,4 +1,5 @@
 2005-10-19  Don Allingham  <don@gramps-project.org>
+	* src/GrampsBSDDB.py: use cursors to rebuild secondary indices.
 	* src/Sources.py: fix typo on gladeif call
 
 2005-10-19  Stefan Bjork  <skalman@acc.umu.se>
